--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inconsolata&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./CodeSynth.png">
     <link rel="stylesheet" href="./Default.css">
     <title>CodeSynth</title>
   </head>
