Frontend is ready for 70-80%

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./CodeSynth.png">
     <link rel="stylesheet" href="./Default.css">
+    <base href="/">
     <title>CodeSynth</title>
   </head>
   <body>
