Made detailed project page

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,9 +11,11 @@
         />
         <link rel="icon" type="image/x-icon" href="./CodeSynth.png" />
         <base href="/" />
+        <meta name="google" content="notranslate" />
+        <meta name="content-language" content="en" />
         <title>CodeSynth</title>
     </head>
-    <body>
+    <body class="notranslate">
         <div id="root"></div>
     </body>
 </html>
